Fixed drag-and-drop behavior, which was failing for some filers (e.g.pcmanfm)

https://bugzilla.gnome.org/show_bug.cgi?id=703544